--- a/OnePageWebsite/index.html
+++ b/OnePageWebsite/index.html
@@ -6,7 +6,7 @@
     <title>Imomotimi Ijaw Dance Event</title>
     <link rel="stylesheet" href="./assets/css/stylesheet.css">
     <!-- <link rel="stylesheet" href="./assets/css/dark.css"> -->
-    <link id="themeStyle" rel="stylesheet" href="./assets/css/light.css">
+    <link id="themeStyle" rel="stylesheet" href="assets/css/light.css">
     <link rel="icon" href="./assets/img/logo.png" type="image/png">
     <link rel="stylesheet" href="assets/fontawesome/css/all.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -32,7 +32,7 @@
     <div class="navbar">
         <!-- Logo on the left -->
         <div class="logo">
-            <img src="./assets/img/logo.png" alt="Logo">
+            <img src="assets/img/logo.png" alt="Logo">
         </div>
 
         <!-- Navigation bar in the center -->
