--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Hello World!!!</h1>
-    <a href="gee-flash.github.io/OnePageWebsite/">OnePageWebsite</a>
+    <a href="https://gee-flash.github.io/OnePageWebsite/">OnePageWebsite</a>
 </body>
 </html>
