--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <ul class="nav-links">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about-section">About</a></li>
-                    <li><a href="#portifolio">Portifolio</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
                     <li><a href="#our-services">Services</a></li>
                     <li><a href="#contact-section">Contact Us</a></li>
                 </ul>
@@ -50,7 +50,7 @@
             <div class="hamburger" onclick="toggleMenu()">
                 <i class="fa-solid fa-bars"></i>
             </div>
-            
+
             <a href="#09139341728" class="call">
                 <i class="fas fa-phone"></i>
                 <div class="call2">
@@ -137,9 +137,9 @@
         </div>
     </section>
 
-    <section id="portifolio" class="portifolio">
+    <section id="portfolio" class="portfolio">
         <div class="choose">
-            <div class="portifolio-content">
+            <div class="portfolio-content">
                 <span>My Skills</span>
                 <h3>You Can Imagine</h3>
                 <h3>I can Do</h3>
